--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,81 +9,186 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#Product">Product</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Add To Cart</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-        <div class="logo">
-            <h2>Furniture</h2>
+<header>
+    <nav>
+        <ul>
+            <li class="flex"><a href="#home">Home</a></li>
+            <li class="flex"><a href="#Product">Product</a></li>
+            <li class="flex"><a href="#Explore">Explore</a></li>
+            <li class="flex"><a href="#information">Information</a></li>
+        </ul>
+    </nav>
+    <div class="logo">
+        <h2>Furniture</h2>
+    </div>
+    <div class="Search-Engine">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <p>$0.00</p>
+        <i class="fa-solid fa-cart-shopping"></i>
+        <p>Log In</p>
+    </div>
+</header>
+<!--HOME SECTION-->
+<section>
+    <div class="Home" id="home">
+        <div class="col-6">
+            <p>Black Friday Is July</p>
+            <h2>UP TO 50% OFF</h2>
+            <p>Hundreds Of Style Available </p>
+            <button>SHOP NOW</button>
         </div>
-        <div class="Search-Engine">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <p>$0.00</p>
-            <i class="fa-solid fa-cart-shopping"></i>
-            <p>Log In</p>
+    </div>
+</section>
+<!--ABOUT SECTION-->
+<section>
+    <div class="about" id="Product">
+        <div class="heading-about">
+            <p>Shop By Category</p>
+            <h2>Shop By Category</h2>
         </div>
-    </header>
-    <!--HOME SECTION-->
-    <section>
-        <div class="Home" id="home">
-            <div class="col-6">
-                <p>Black Friday Is July</p>
-                <h2>UP TO 50% OFF</h2>
-                <p>Hundreds Of Style Available </p>
-                <button>SHOP NOW</button>
-            </div>
-        </div>
-    </section>
-    <!--ABOUT SECTION-->
-    <section>
-        <div class="about" id="Product">
-            <div class="heading-about">
-                <p>Shop By Category</p>
-                <h2>Shop By Category</h2>
-            </div>
-            <div class="about-images-collection">
-                <div class="product-item-box">
-                    <div class="img-item"> 
-                        <img src="https://img.freepik.com/free-psd/armchair-pillow_176382-886.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=ais" alt="">
-                    </div>
-                    <div class="item-name">
-                        <h3>Sofa Chair</h3>
-                    </div>
+        <div class="about-images-collection">
+            <div class="product-item-box">
+                <div class="img-item">
+                    <img src="https://img.freepik.com/free-psd/armchair-pillow_176382-886.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=ais"
+                        alt="">
                 </div>
-                <div class="product-item-box">
-                    <div class="img-item"> 
-                        <img src="https://img.freepik.com/free-psd/modern-bedroom-interior-isolated_176382-702.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=sph" alt="">
-                    </div>
-                    <div class="item-name">
-                        <h3>BED</h3>
-                    </div>
-                </div><div class="product-item-box">
-                    <div class="img-item"> 
-                        <img src="https://img.freepik.com/free-vector/realistic-modern-stylish-golden-white-standard-lamp-vector-illustration_1284-66950.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=sph" alt="">
-                    </div>
-                    <div class="item-name">
-                        <h3>Night Lamp</h3>
-                    </div>
-                </div><div class="product-item-box">
-                    <div class="img-item"> 
-                        <img src="https://img.freepik.com/free-photo/vintage-furniture_74190-344.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=ais" alt="">
-                    </div>
-                    <div class="item-name">
-                        <h3>Table</h3>
-                    </div>
+                <div class="item-name">
+                    <h3>Sofa Chair</h3>
                 </div>
-
+            </div>
+            <div class="product-item-box">
+                <div class="img-item">
+                    <img src="https://img.freepik.com/free-psd/modern-bedroom-interior-isolated_176382-702.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=sph"
+                        alt="">
+                </div>
+                <div class="item-name">
+                    <h3>BED</h3>
+                </div>
+            </div>
+            <div class="product-item-box">
+                <div class="img-item">
+                    <img src="https://img.freepik.com/free-vector/realistic-modern-stylish-golden-white-standard-lamp-vector-illustration_1284-66950.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=sph"
+                        alt="">
+                </div>
+                <div class="item-name">
+                    <h3>Night Lamp</h3>
+                </div>
+            </div>
+            <div class="product-item-box">
+                <div class="img-item">
+                    <img src="https://img.freepik.com/free-photo/vintage-furniture_74190-344.jpg?size=626&ext=jpg&ga=GA1.1.570945863.1704460564&semt=ais"
+                        alt="">
+                </div>
+                <div class="item-name">
+                    <h3>Table</h3>
+                </div>
+            </div>  
+        </div>
+    </div>
+</section>
+<!--EXPLORE SECTION-->
+<section id="Explore">
+    <div class="box-collection">
+        <div class="headerNAme">
+            <h2>Explore Collection</h2>
+        </div>
+        <div class="colection-type">
+            <div class="row-explorepage">
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-couch"></i>
+                    <p>Sofa</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-table"></i>
+                    <p>Table</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>Bed</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-lightbulb"></i>
+                    <p>Lamp</p>
+                </div>
+            </div>
+            <div class="row-explorepage">
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-utensils"></i>
+                    <p>Dining Table</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-brands fa-windows"></i>
+                    <p>Mirrors</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-chair"></i>
+                    <p> Chairs</p>
+                </div>
+                <div class="box-collection-item">
+                    <i class="fa-solid fa-door-open"></i>
+                    <p>Doors</p>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+<!--WHY CHOOSE US-->
+<section>
+    <div class="information" id="information">
+        <p>Best Products</p>
+        <h2>Why Choose Us</h2>
+        <div class="row flex">
+            <div class="services-box flex">
+                <i class="fa-solid fa-truck-fast"></i>
+                <h3>Fast Delivery</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, saepe!</p>
+            </div>
+            <div class="services-box flex">
+                <i class="fa-regular fa-credit-card"></i>
+                <h3>Free Shipping</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, unde.</p>
+            </div>
+            <div class="services-box flex">
+                <i class="fa-solid fa-shield-halved"></i>
+                <h3>Secure Checkout</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, atque!</p>
+            </div>
+            <div class="services-box flex">
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                <h3>Easy Returns</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam!</p>
+            </div>
+        </div>
+        <footer class="flex">
+            <div class="footer-partitions">
+                <h3>FURNITURE</h3>
+                <span>Shop</span>
+            </div>
+            <div class="footer-partitions flex" style="float: left;">
+                <div class="col-4 flex">
+                    <h4>Links</h4>
+                    <a href="#">Story</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Track Order</a>
+                    <a href="#">Help</a>
+                </div>
+                <div class="col-4 flex">
+                    <h4>Categories</h4>
+                    <a href="#">Bedroom(9)</a>
+                    <a href="#">Decor(11)</a>
+                    <a href="#">Living Room(5)</a>
+                    <a href="#">Office(6)</a>
+                </div>
+                <div class="col-4 flex">
+                    <h4>Subscribe</h4>
+                    <a href="#">Story</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Track Order</a>
+                    <a href="#">Help</a>
+                </div>
+            </div>
+        </footer>
+    </div>
+</section>
 </body>
-
 </html>
